changes for current java version